# Football-Manager-2K20

./: .gitignore  CMakeLists.txt  Football-Manager-2K20.sln  Football-Manager-2K20.vcxproj  Football-Manager-2K20.vcxproj.filters  Game.cpp  GameWindow.cpp  LICENSE  MainWindow.cpp  Morale.cpp  README.md  Simulation.cpp  Soccer_Manager_2k20.cbp  Soccer_Manager_2k20.depend  Soccer_Manager_2k20.layout  Untitled Diagram.drawio-2.xml  User.cpp  buildPrj.sh  database.h  dbs.h  dbsCreation.h  dbsSource.cpp  dbsSource.h  gameFunc.cpp  gameFunc.h  main.cpp  run.sh  test.cpp  utility.h
Debug/: Football-Manager-2K20.ilk
Debug/Football.3A274EF1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Football-Manager-2K20.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
dbs/: dbsCreation.h  dbsSource.cpp
include/: dbsSource.h  gameFunc.h
src/: GameWindow.cpp  MainWindow.cpp  User.cpp  dbsSource.cpp  main.cpp
unit-tests/: catch.hpp  mainwindow_tests.cpp
x64/Debug/: Football-Manager-2K20.ilk  vc142.idb
x64/Debug/Football.3A274EF1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Football-Manager-2K20.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
